[package]
name = "rusty-pcap"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust library for reading PCAP files"
repository = "https://github.com/wyatt-herkamp/rusty-pcap"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
rust-version = "1.88.0"
documentation = "https://docs.rs/rusty-pcap/latest/rusty_pcap/"
[dependencies]
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false, features = [
  "io-util",
] }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["chrono"]
tokio-async = ["tokio", "futures"]
[dev-dependencies]
anyhow = "1.0"
# Used Internally to make sure the packets are not malformed
etherparse = "0.19"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8", features = ["async_tokio"] }
pcap = { version = "2" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rusty-pcap = { path = ".", features = ["tokio-async", "chrono"] }
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
[[bench]]
name = "parse"
harness = false
[[bench]]
name = "parse_ng"
harness = false
[[bench]]
name = "parse_ng_blocks"
harness = false
[[bench]]
name = "parse_async"
harness = false
[[bench]]
name = "pcap_packet_header"
harness = false
[package.metadata.docs.rs]
features = ["tokio-async", "chrono"]
